; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_pagesetup_init_combos.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_pagesetup_init_combos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cmb1 = common dso_local global i32 0, align 4
@cmb2 = common dso_local global i32 0, align 4
@cmb3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @pagesetup_init_combos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pagesetup_init_combos(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @pagesetup_get_devmode(i32* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @pagesetup_get_devname(i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @pagesetup_get_portname(i32* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @cmb1, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @PRINTDLG_SetUpPrinterListComboW(i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @cmb2, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @PRINTDLG_SetUpPaperComboBoxW(i32 %18, i32 %19, i32 %20, i32 %21, i32* %22)
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @cmb3, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @PRINTDLG_SetUpPaperComboBoxW(i32 %24, i32 %25, i32 %26, i32 %27, i32* %28)
  %30 = load i32*, i32** %4, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @pagesetup_release_a_devname(i32* %30, i32 %31)
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @pagesetup_release_a_devname(i32* %33, i32 %34)
  %36 = load i32*, i32** %4, align 8
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @pagesetup_release_devmode(i32* %36, i32* %37)
  ret void
}

declare dso_local i32* @pagesetup_get_devmode(i32*) #1

declare dso_local i32 @pagesetup_get_devname(i32*) #1

declare dso_local i32 @pagesetup_get_portname(i32*) #1

declare dso_local i32 @PRINTDLG_SetUpPrinterListComboW(i32, i32, i32) #1

declare dso_local i32 @PRINTDLG_SetUpPaperComboBoxW(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @pagesetup_release_a_devname(i32*, i32) #1

declare dso_local i32 @pagesetup_release_devmode(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
